tests/errors/syn_cases8.java
public class syn_cases8 {
public static void main(String[] args){
switch(args.length){
case :
}
}
}